%%{init: {"er": {"layoutDirection": "LR", "diagramPadding": 48}, "flowchart": {"curve": "stepBefore"}}}%%
erDiagram
  direction LR

  purchase_request {
    UUID id PK
    UUID tenant_id
    VARCHAR pr_no UK
    gd1_pr_status status
    DATE required_date
    NUMERIC total_amount
  }

  purchase_request_line {
    UUID id PK
    UUID tenant_id
    UUID purchase_request_id FK
    UUID item_id
    NUMERIC qty_requested
    NUMERIC qty_converted
  }

  purchase_order {
    UUID id PK
    UUID tenant_id
    VARCHAR po_no UK
    INT revision
    UUID supplier_id
    gd1_po_status status
  }

  purchase_order_line {
    UUID id PK
    UUID tenant_id
    UUID purchase_order_id FK
    UUID purchase_request_line_id FK
    NUMERIC qty_ordered
    NUMERIC qty_shipped
    NUMERIC landed_cost_alloc
  }

  shipment {
    UUID id PK
    UUID tenant_id
    VARCHAR shipment_no UK
    gd1_shipment_mode mode
    gd1_shipment_status status
    gd1_customs_stream customs_stream
  }

  shipment_line {
    UUID id PK
    UUID tenant_id
    UUID shipment_id FK
    UUID purchase_order_line_id FK
    NUMERIC qty_shipped
  }

  shipment_milestone {
    UUID id PK
    UUID tenant_id
    UUID shipment_id FK
    SMALLINT sequence_no
    gd1_milestone_code milestone_code
    DATE actual_date
  }

  shipment_cost {
    UUID id PK
    UUID tenant_id
    UUID shipment_id FK
    gd1_cost_type cost_type
    NUMERIC amount
    gd1_alloc_method alloc_method
  }

  po_stage_task {
    UUID id PK
    UUID tenant_id
    UUID purchase_order_id FK
    gd1_po_status po_stage
    gd1_task_status status
  }

  po_task_template {
    UUID id PK
    UUID tenant_id
    gd1_template_po_type po_type
    gd1_po_status po_stage
    VARCHAR task_name
  }

  approval_matrix_config {
    UUID id PK
    UUID tenant_id
    gd1_approval_applies_to applies_to
    NUMERIC min_amount
    NUMERIC max_amount
    INT step_order
  }

  purchase_request ||--o{ purchase_request_line : has
  purchase_request_line ||--o{ purchase_order_line : sourced_by
  purchase_order ||--o{ purchase_order_line : has
  purchase_order_line ||--o{ shipment_line : shipped_by
  shipment ||--o{ shipment_line : contains
  shipment ||--o{ shipment_milestone : tracks
  shipment ||--o{ shipment_cost : costs
  purchase_order ||--o{ po_stage_task : owns
  po_task_template ||--o{ po_stage_task : generates
  approval_matrix_config }o..o{ purchase_request : resolves_approval
